--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section class="landing">
+        <nav>
+            <div class="row nav__row">
+                <div class="nav__logo">
+                    <img src="/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="nav__logo--img" alt="" >
+                </div>
+                <div class="nav__logo--title">Treact</div>
+            </div>
+            <div class="nav__links">
+                <a href="#" class="nav__link">About</a>
+                <a href="#" class="nav__link">Blog</a>
+                <a href="#" class="nav__link">Pricing</a>
+                <a href="#" class="nav__link">Contact Us</a>
+                <a href="#" class="nav__link login">Login</a>
+                <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+            </div>
+        </nav>
+    </section>
+
 </body>
 </html>
