--- a/index.html
+++ b/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section class="landing">
-        <nav>
-            <div class="row nav__row">
-                <div class="nav__logo">
-                    <img src="/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="nav__logo--img" alt="" >
-                </div>
-                <div class="nav__logo--title">Treact</div>
-            </div>
+      <nav>
+        <div class="row nav__row">
+          <div class="nav__logo">
+            <img
+              src="/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg"
+              class="nav__logo--img"
+              alt=""
+            />
+            <div class="nav__logo--title">Treact</div>
+          </div>
             <div class="nav__links">
                 <a href="#" class="nav__link">About</a>
                 <a href="#" class="nav__link">Blog</a>
                 <a href="#" class="nav__link">Pricing</a>
                 <a href="#" class="nav__link">Contact Us</a>
                 <a href="#" class="nav__link login">Login</a>
-                <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+                <a href="#" class="nav__link nav__link--primary">Sign Up </a>
+          </div>
+          <button class="btn__menu" onclick="openMenu()"></button>
+        </div>
+      </nav>
+      <div class="modal"></div>
+      <header>
+        <div class="container">
+          <div class="row">
+            <div class="header__description">
+              <h1>
+                Beautiful React Templates
+                <span class="text__purple">for you</span>
+              </h1>
             </div>
-        </nav>
+            <p class="header__description--para">
+              Our templates are easy to setup, understand and customize. Fully
+              modular components with a variety of pages and components.
+            </p>
+            <div class="header__email">
+                <input type="text" class="header__email--input" placeholder="Your E-mail Address"> 
+                <button class="header__email--btn">Get Started</button>
+            </div>
+            <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+          </div>
+        </div>
+      </header>
     </section>
-
-</body>
+  </body>
 </html>
