--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <section class="landing">
       <nav>
@@ -18,39 +19,131 @@
             />
             <div class="nav__logo--title">Treact</div>
           </div>
-            <div class="nav__links">
-                <a href="#" class="nav__link">About</a>
-                <a href="#" class="nav__link">Blog</a>
-                <a href="#" class="nav__link">Pricing</a>
-                <a href="#" class="nav__link">Contact Us</a>
-                <a href="#" class="nav__link login">Login</a>
-                <a href="#" class="nav__link nav__link--primary">Sign Up </a>
+          <div class="nav__links">
+            <a href="#" class="nav__link">About</a>
+            <a href="#" class="nav__link">Blog</a>
+            <a href="#" class="nav__link">Pricing</a>
+            <a href="#" class="nav__link">Contact Us</a>
+            <a href="#" class="nav__link login">Login</a>
+            <a href="#" class="nav__link nav__link--primary">Sign Up </a>
           </div>
-          <button class="btn__menu" onclick="openMenu()"></button>
         </div>
       </nav>
-      <div class="modal"></div>
+
       <header>
         <div class="container">
           <div class="row">
             <div class="header__description">
               <h1>
                 Beautiful React Templates
-                <span class="text__purple">for you</span>
+                <span class="purple">for you</span>
               </h1>
-            </div>
-            <p class="header__description--para">
-              Our templates are easy to setup, understand and customize. Fully
-              modular components with a variety of pages and components.
-            </p>
-            <div class="header__email">
-                <input type="text" class="header__email--input" placeholder="Your E-mail Address"> 
+              <p class="header__description--para">
+                Our templates are easy to setup, understand and customize. Fully
+                modular components with a variety of pages and components.
+              </p>
+              <div class="header__email">
+                <input
+                  type="text"
+                  class="header__email--input"
+                  placeholder="Your E-mail Address"
+                />
                 <button class="header__email--btn">Get Started</button>
+                <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+                <img
+                  src="/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png"
+                  class="header__customers"
+                  alt="customers__logo"
+                />
+              </div>
             </div>
-            <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+
+            <figure class="header__img--wrapper">
+              <img
+                src="/assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
+                class="header__img"
+                alt=""
+              />
+            </figure>
           </div>
         </div>
       </header>
+    </section>
+
+    <section id="features">
+        <div class="contaner">
+            <div class="row__narrow">
+                <h2 class="features__title"><span class="purple">FEATURES</span></h2>
+                <h3 class="features__subtitle">We have Amazing <span class="purple">Service</span></h3>
+                <div class="features__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo soluta quae accusantium aliquid veritatis eaque rerum quas autem consequuntur ipsam?</div>
+
+                <div class="features">
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure</h4>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="quality__work">
+
     </section>
   </body>
 </html>
