Features Section done, icons need swapping

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="feature__row">
                             <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure</h4>
+                                <h4 class="feature__title">24/7 Support</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                         <div class="feature__row">
                             <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure</h4>
+                                <h4 class="feature__title">Customizable</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                         <div class="feature__row">
                             <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure</h4>
+                                <h4 class="feature__title">Reliable</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         <div class="feature__row">
                             <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure</h4>
+                                <h4 class="feature__title">Fast</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                         <div class="feature__row">
                             <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure</h4>
+                                <h4 class="feature__title">Easy</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
                             </div>
                         </div>
