--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div class="feature">
                         <div class="feature__row">
-                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <figure class="feature__img--wrapper"> <img src="/assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
                                 <h4 class="feature__title">24/7 Support</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
@@ -100,7 +100,7 @@
 
                     <div class="feature">
                         <div class="feature__row">
-                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <figure class="feature__img--wrapper"> <img src="/assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
                                 <h4 class="feature__title">Customizable</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
@@ -110,7 +110,7 @@
 
                     <div class="feature">
                         <div class="feature__row">
-                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <figure class="feature__img--wrapper"> <img src="/assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
                                 <h4 class="feature__title">Reliable</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
@@ -120,7 +120,7 @@
 
                     <div class="feature">
                         <div class="feature__row">
-                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <figure class="feature__img--wrapper"> <img src="/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
                                 <h4 class="feature__title">Fast</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
@@ -130,7 +130,7 @@
 
                     <div class="feature">
                         <div class="feature__row">
-                            <figure class="feature__img--wrapper"> <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt=""></figure>
+                            <figure class="feature__img--wrapper"> <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" class="feature__img" alt=""></figure>
                             <div class="feature__text">
                                 <h4 class="feature__title">Easy</h4>
                                 <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, facilis?</p>
@@ -142,8 +142,37 @@
         </div>
     </section>
 
-    <section id="quality__work">
+    <section id="quality">
+        <div class="container">
+            <div class="row">
+                <div class="quality__description">
+                    <h2 class="quality__title"><span class="purple">QUALITY WORK</span></h2>
+                    <h3 class="quality__subtitle">Designed & Developed by <span class="purple">Professionals</span></h3>
+                    <p class="section__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum omnis ea nostrum? Reprehenderit provident amet iusto expedita repudiandae asperiores? Blanditiis, non. Quas ipsa, repellendus quidem suscipit corrupti at laborum rem!</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <figure class="quality__img--wrapper">
+                    <img src="/assets/hero-screenshot-1.40a097b525c2f8c9808e.png" class="quality__img" alt="">
+                </figure>
+            </div>
+        </div>
+    </section>
 
+    <section id="steps">
+        <div class="container">
+            <div class="row">
+                <figure class="steps__img--wrapper">
+                    <img src="/assets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
+                </figure>
+                <h2 class="steps__title">STEPS</h2>
+                <h3 class="Steps__subtitle">Easy to <span class="purple">Get Started.</span></h3>
+                <div class="steps__list">
+                    <div class="step"></div>
+                    <div class="step"></div>
+                    <div class="step"></div>
+                </div>
+            </div>
+        </div>
     </section>
   </body>
 </html>
