values section html

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <section id="features">
       <div class="contaner">
         <div class="row__narrow">
-          <h2 class="features__title"><span class="purple">FEATURES</span></h2>
-          <h3 class="features__subtitle">
+          <h2 class="section__title"><span class="purple">FEATURES</span></h2>
+          <h3 class="section__subtitle">
             We have Amazing <span class="purple">Service</span>
           </h3>
-          <div class="features__para">
+          <div class="section__para">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
             soluta quae accusantium aliquid veritatis eaque rerum quas autem
             consequuntur ipsam?
@@ -206,13 +206,13 @@
       <div class="container">
         <div class="row">
           <div class="quality__description">
-            <h2 class="quality__title">
+            <h2 class="section__title">
               <span class="purple">QUALITY WORK</span>
             </h2>
-            <h3 class="quality__subtitle">
+            <h3 class="section__subtitle">
               Designed & Developed by <span class="purple">Professionals</span>
             </h3>
-            <p class="quality__para">
+            <p class="section__para">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
               omnis ea nostrum? Reprehenderit provident amet iusto expedita
               repudiandae asperiores? Blanditiis, non. Quas ipsa, repellendus
@@ -242,36 +242,77 @@
             />
           </figure>
           <div class="steps__description">
-            <div class="steps__title"><span class="purple"> STEPS </span></div>
-            <h3 class="steps__subtitle">
+            <div class="section__title">
+              <span class="purple"> STEPS </span>
+            </div>
+            <h3 class="section__subtitle">
               Easy to <span class="purple">Get Started.</span>
             </h3>
+
             <div class="steps__list">
               <div class="step">
                 <div class="step__number">01</div>
                 <div class="step__description">
-                    <div class="step__title">Register</div>
-                    <div class="step__para">
-                        Create an account with us using Google or Facebook.
-                    </div>
+                  <div class="step__title">Register</div>
+                  <div class="step__para">
+                    Create an account with us using Google or Facebook.
+                  </div>
                 </div>
               </div>
+
               <div class="step">
                 <div class="step__number">02</div>
                 <div class="step__description">
-                    <div class="step__title">Download</div>
-                    <div class="step__para">
-                        Browse and Download the template that you like from the marketplace.
-                    </div>
+                  <div class="step__title">Download</div>
+                  <div class="step__para">
+                    Browse and Download the template that you like from the
+                    marketplace.
+                  </div>
                 </div>
               </div>
+
               <div class="step">
                 <div class="step__number">03</div>
                 <div class="step__description">
-                    <div class="step__title">Run</div>
-                    <div class="step__para">
-                        Follow the instructions to setup and customize the template to your needs.
-                    </div>
+                  <div class="step__title">Run</div>
+                  <div class="step__para">
+                    Follow the instructions to setup and customize the template
+                    to your needs.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="values">
+      <div class="container">
+        <div class="row">
+          <div class="values__description">
+            <div class="section__title">VALUES</div>
+            <h2 class="section__subtitle">
+              We Always Abide by Our <span class="purple">Principles.</span>
+            </h2>
+            <div class="section__para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+              eos ab delectus nisi praesentium quis dolorem nobis optio totam
+              laboriosam similique minima maxime natus inventore dolorum
+              officia, debitis unde fugit libero deleniti exercitationem quod
+              iure! Doloremque?
+            </div>
+            <div class="values__list">
+              <div class="value">
+                <div class="value__title">
+                  Affordable
+                  <figure class="value__img--wrapper">
+                    <img
+                      src="/assets/dollar-sign.png"
+                      class="value__img"
+                      alt=""
+                    />
+                  </figure>
                 </div>
               </div>
             </div>
