--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
               officia, debitis unde fugit libero deleniti exercitationem quod
               iure! Doloremque?
             </div>
+
             <div class="values__list">
               <div class="value">
                 <div class="value__title">
-                  Affordable
                   <figure class="value__img--wrapper">
                     <img
                       src="/assets/dollar-sign.png"
@@ -313,12 +313,61 @@
                       alt=""
                     />
                   </figure>
+                  <div class="value__name">Affordable</div>
+                </div>
+                <div class="value__para">
+                  We promise to offer you the best rate we can - at par with the
+                  industry standard.
+                </div>
+              </div>
+
+              <div class="value">
+                <div class="value__title">
+                  <figure class="value__img--wrapper">
+                    <img
+                      src="/assets/briefcase.png"
+                      class="value__img"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="value__name">Professionalism</div>
+                </div>
+                <div class="value__para">
+                  We assure you that our templates are designed and created by
+                  professional designers.
                 </div>
               </div>
             </div>
+            <button class="values__btn">Learn More</button>
           </div>
+          <figure>
+            <img
+              class="values__img"
+              src="/assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
+              alt=""
+            />
+          </figure>
         </div>
       </div>
+    </section>
+
+    <section id="pricing">
+        <div class="container">
+            <div class="row">
+                <div class="section__title">PRICING</div>
+                <div class="section__subtitle">Reasonable & Flexible <span class="purple">Plans</span></div>
+                <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas impedit aliquam. Error cum deserunt quas cupiditate voluptate vel.</div>
+                <div class="plans">
+                    <div class="plan">
+                        <div class="plan__stripe"></div>
+                        <div class="plan__top"></div>
+                        <div class="plan__middle"></div>
+                        <div class="plan__bottom"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
   </body>
 </html>
