pricing html done and mild styling plus testimonials

--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
             <h2 class="section__subtitle">
               We Always Abide by Our <span class="purple">Principles.</span>
             </h2>
-            <div class="section__para">
+            <p class="section__para">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
               eos ab delectus nisi praesentium quis dolorem nobis optio totam
               laboriosam similique minima maxime natus inventore dolorum
               officia, debitis unde fugit libero deleniti exercitationem quod
               iure! Doloremque?
-            </div>
+            </p>
 
             <div class="values__list">
               <div class="value">
@@ -315,10 +315,10 @@
                   </figure>
                   <div class="value__name">Affordable</div>
                 </div>
-                <div class="value__para">
+                <p class="value__para">
                   We promise to offer you the best rate we can - at par with the
                   industry standard.
-                </div>
+                </p>
               </div>
 
               <div class="value">
@@ -352,22 +352,96 @@
     </section>
 
     <section id="pricing">
-        <div class="container">
-            <div class="row">
-                <div class="section__title">PRICING</div>
-                <div class="section__subtitle">Reasonable & Flexible <span class="purple">Plans</span></div>
-                <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas impedit aliquam. Error cum deserunt quas cupiditate voluptate vel.</div>
-                <div class="plans">
-                    <div class="plan">
-                        <div class="plan__stripe"></div>
-                        <div class="plan__top"></div>
-                        <div class="plan__middle"></div>
-                        <div class="plan__bottom"></div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="section__title">PRICING</div>
+          <div class="section__subtitle">
+            Reasonable & Flexible <span class="purple">Plans</span>
+          </div>
+          <div class="section__para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas
+            impedit aliquam. Error cum deserunt quas cupiditate voluptate vel.
+          </div>
+          <div class="plans">
+            <div class="plan">
+              <div class="plan__stripe"></div>
+              <div class="plan__top">
+                <div class="plan__name">PERSONAL</div>
+                <div class="plan__price">$17.99</div>
+                <div class="plan__duration">MONTHLY</div>
+              </div>
+              <div class="plan__middle">
+                <div class="plan__target">For Individuals</div>
+                <div class="plan__feature">30 Templates</div>
+                <div class="plan__feature">7 Landing Pages</div>
+                <div class="plan__feature">12 Internal Pages</div>
+                <div class="plan__feature">Basic Assistance</div>
+              </div>
+              <div class="plan__bottom">
+                <button class="plan__button">BUY NOW</button>
+              </div>
             </div>
+            <div class="plan">
+              <div class="plan__stripe"></div>
+              <div class="plan__top">
+                <div class="plan__name">BUSINESS</div>
+                <div class="plan__price">$37.99</div>
+                <div class="plan__duration">MONTHLY</div>
+              </div>
+              <div class="plan__middle">
+                <div class="plan__target">For Small Businesses</div>
+                <div class="plan__feature">60 Templates</div>
+                <div class="plan__feature">15 Landing Pages</div>
+                <div class="plan__feature">22 Internal Pages</div>
+                <div class="plan__feature">Priority Assistance</div>
+              </div>
+              <div class="plan__bottom">
+                <button class="plan__button">BUY NOW</button>
+              </div>
+            </div>
+            <div class="plan">
+              <div class="plan__stripe"></div>
+              <div class="plan__top">
+                <div class="plan__name">ENTERPRISE</div>
+                <div class="plan__price">$57.99</div>
+                <div class="plan__duration">MONTHLY</div>
+              </div>
+              <div class="plan__middle">
+                <div class="plan__target">For Large Companies</div>
+                <div class="plan__feature">90 Templates</div>
+                <div class="plan__feature">27 Landing Pages</div>
+                <div class="plan__feature">37 Internal Pages</div>
+                <div class="plan__feature">Personal Assistance</div>
+              </div>
+              <div class="plan__bottom">
+                <button class="plan__button">BUY NOW</button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </section>
 
+    <section id="testimonials">
+      <div class="container">
+        <div class="row">
+          <img
+            src="/assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg"
+            alt=""
+          />
+          <div class="testimonials__description">
+            <div class="section__title">TESTIMONIALS</div>
+            <div class="section__subtitle">
+              Our Clients <span class="purple">Love Us</span>
+            </div>
+            <div class="section__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad
+              minim veniam.
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
