testimonials html change and rating added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>treact</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
   </head>
 
   <body>
@@ -434,10 +435,17 @@
             <div class="section__subtitle">
               Our Clients <span class="purple">Love Us</span>
             </div>
-            <div class="section__para">
+            <p class="section__para">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad
               minim veniam.
+            </p>
+            <div class="testimonial__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
             </div>
           </div>
         </div>
