--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>treact</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
 
   <body>
@@ -426,7 +429,7 @@
     <section id="testimonials">
       <div class="container">
         <div class="row">
-          <img
+          <img class="testimonial__img"
             src="/assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg"
             alt=""
           />
@@ -440,12 +443,23 @@
               eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad
               minim veniam.
             </p>
-            <div class="testimonial__rating">
+            <div class="testimonial">
+              <div class="testimonial__rating">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i> 
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+              </div>
+              <div class="testimonial__title">Amazing User Experience</div>
+              <p class="testimonial__para">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia. Lorem ipsum
+                dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco.
+              </p>
             </div>
           </div>
         </div>
