--- a/index.html
+++ b/index.html
@@ -387,19 +387,19 @@
             </div>
             <div class="plan">
               <div class="plan__stripe"></div>
-              <div class="plan__top">
+              <div class="plan__top plan__top--2">
                 <div class="plan__name">BUSINESS</div>
                 <div class="plan__price">$37.99</div>
                 <div class="plan__duration">MONTHLY</div>
               </div>
-              <div class="plan__middle">
+              <div class="plan__middle plan__middle--2">
                 <div class="plan__target">For Small Businesses</div>
                 <div class="plan__feature">60 Templates</div>
                 <div class="plan__feature">15 Landing Pages</div>
                 <div class="plan__feature">22 Internal Pages</div>
                 <div class="plan__feature">Priority Assistance</div>
               </div>
-              <div class="plan__bottom">
+              <div class="plan__bottom plan__bottom--2">
                 <button class="plan__button">BUY NOW</button>
               </div>
             </div>
