--- a/index.html
+++ b/index.html
@@ -460,6 +460,11 @@
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco.
               </p>
+              <div class="testimonial__bottom">
+                <div class="testimonial__profile">
+
+                </div>
+              </div>
             </div>
           </div>
         </div>
